# cvrep

./: CMakeLists.txt
include/: ImageReader.h
src/: CMakeLists.txt  CmakeLists.txt  ImageReader.cpp  OpenCVImageReader.cpp  OpenCVImageReader.h  main.cpp
